Updated modal styles and numberous other style tweaks. Added pagination to experiment lists as well

--- a/packages/front-end/components/Layout/Layout.module.scss
+++ b/packages/front-end/components/Layout/Layout.module.scss
@@ -51,8 +51,11 @@ $topbarheight: 60px;
   }
   ul {
     list-style-type: none;
-    margin: 0;
+    margin: 2px 0 0 0;
     padding: 0;
+    .first {
+      margin-top: 10px;
+    }
   }
 }
 
