--- a/packages/front-end/styles/colors.scss
+++ b/packages/front-end/styles/colors.scss
@@ -24,12 +24,18 @@ $cyan: #17a2b8;
 $second-blue: #267ba5;
 
 // redesign colors:
-$gray2: #a3a8c2;
 $dark-blue: #050549;
 $highlight-purple: #7c45ea;
+$purple-tint: #a3a8c2;
 $dark-purple2: #1c0555;
 $main-black: #171221;
 $primary-blue: #1d63ea;
+$gray1: #52597a;
+$gray2: #a3a8c2;
+$gray3: #c2c5d6;
+$gray4: #e0e2eb;
+$gray5: #f0f1f5;
+$gray6: #f6f7f9;
 
 $main-background: #f5f7fa;
 $dark-purple: #391c6d;
