Adjusted how we handle responsive tables for experiments

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -158,7 +158,7 @@ pre {
 
 @media only screen and (max-width: 760px),
   (min-device-width: 768px) and (max-device-width: 1024px) {
-  .gbtable {
+  .responsive-table {
     display: block;
     border: 0;
     background-color: none;
