Improved edit experiment form. Styled errors on the run query component.

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -90,6 +90,7 @@ pre {
     lighten($highlight-purple, 10%),
     darken($highlight-purple, 30%)
   );
+  white-space: nowrap;
 }
 
 .btn-outline-primary {
