--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -67,7 +67,18 @@ pre {
 .text-indigo {
   color: $indigo;
 }
-
+.text-gray {
+  color: $gray1;
+}
+.font-weight-semibold {
+  font-weight: 500;
+}
+.uppercase-title {
+  color: $gray1;
+  text-transform: uppercase;
+  font-size: 11px;
+  font-weight: 600;
+}
 // default bootstrap overrides:
 
 .btn-primary {
@@ -79,6 +90,8 @@ pre {
     lighten($highlight-purple, 10%),
     darken($highlight-purple, 30%)
   );
+  white-space: nowrap;
+  font-weight: 600;
 }
 
 .btn-outline-primary {
@@ -94,17 +107,298 @@ pre {
   line-height: 1em;
   font-size: 85.72%; //12px
   margin-bottom: 2px;
+  font-weight: 700;
+  .badge {
+    margin-bottom: 0;
+  }
 }
 .badge-primary {
   @include badge-variant(#00ace5);
   border: 1px solid rgba(23, 18, 33, 0.1);
-  font-weight: 700;
 }
-
+.badge-gray {
+  @include badge-variant(#f6f7f9);
+  border: 1px solid $gray4;
+}
+.graybox {
+  background-color: $gray6;
+  padding: 15px 20px 20px;
+  border-radius: 3px;
+  border: 1px solid $gray5;
+  label {
+    font-weight: 600;
+  }
+}
 .hover-highlight {
   transition: all 0.3s cubic-bezier(0.685, 0.0473, 0.346, 1);
   &:hover {
     background-color: rgba(124, 69, 234, 0.06);
+  }
+}
+.modal {
+  .modal-header {
+    background-color: $gray5;
+  }
+  .rbt-token {
+    background-color: rgba($highlight-purple, 0.1);
+    color: $highlight-purple;
+    font-weight: 600;
+  }
+}
+.gbtable {
+  color: $main-black;
+  margin-bottom: 0;
+  background-color: $white;
+  border: 1px solid $gray4;
+  thead {
+    th {
+      font-size: 11px;
+      text-transform: uppercase;
+      font-weight: 600;
+      color: #52597a;
+      white-space: nowrap;
+      border-bottom: 1px solid $gray4;
+      border-top: 0;
+
+      .activesort,
+      .inactivesort {
+        font-size: 13px;
+      }
+    }
+  }
+  td {
+    vertical-align: middle;
+  }
+}
+
+@media only screen and (max-width: 760px),
+  (min-device-width: 768px) and (max-device-width: 1024px) {
+  .responsive-table {
+    display: block;
+    border: 0;
+    background-color: unset;
+
+    /* Force table to not be like tables anymore */
+    table,
+    thead,
+    tbody,
+    th,
+    td,
+    tr {
+      display: block;
+    }
+
+    .nowrap {
+      /* remove this so we can wrap */
+      white-space: inherit;
+    }
+
+    /* Hide table headers (but not display: none;, for accessibility) */
+    thead tr {
+      position: absolute;
+      top: -9999px;
+      left: -9999px;
+    }
+
+    tr {
+      border: 1px solid $gray4;
+      margin-bottom: 1em;
+      background-color: white;
+    }
+
+    td {
+      /* Behave  like a "row" */
+      border: none;
+      position: relative;
+      min-height: 42px;
+      background-color: white;
+    }
+    tr td:not(:last-child) {
+      border-bottom: 1px solid $gray4;
+    }
+
+    &.experiment-table {
+      .testname {
+        font-weight: 700;
+      }
+      .watching {
+        display: none;
+      }
+    }
+
+    td:before {
+      /* Now like a table header */
+      //position: absolute;
+      /* Top/left values mimic padding */
+      top: 12px;
+      left: 6px;
+      padding-right: 10px;
+      white-space: nowrap;
+      content: attr(data-title);
+      color: $gray1;
+    }
+  }
+}
+
+.pagination-area {
+  border-top: 1px solid $gray4;
+  padding: 10px;
+
+  .pagination {
+    .page-item {
+      .page-link {
+        line-height: 20px;
+        padding: 5px 10px;
+        text-align: center;
+        border: 0;
+        margin: 0 5px;
+        font-weight: 600;
+        color: $main-black;
+      }
+      .link-number {
+        min-width: 30px;
+        min-height: 30px;
+        border-radius: 50%;
+      }
+      .link-text {
+        svg {
+          margin: 0 10px;
+        }
+      }
+      &.active .page-link {
+        color: #fff;
+      }
+      &.disabled .page-link {
+        color: $gray2;
+      }
+    }
+    //.active .page-link
+  }
+}
+.buttontabs {
+  .nav-button-tabs {
+    margin-bottom: 20px;
+    border: 0;
+
+    .form-control {
+      margin-bottom: -1px;
+      height: 38px;
+    }
+  }
+  .nav-button-item {
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 22px;
+    border: 1px solid $gray4;
+    border-radius: 0;
+    border-right: 0;
+    padding: 6px 20px;
+    background-color: #fff;
+    color: $main-black;
+    &:hover {
+      background-color: rgba($highlight-purple, 0.08);
+      border: 1px solid rgba($highlight-purple, 0.15);
+      border-right: 0;
+      color: $highlight-purple;
+    }
+    &.active {
+      color: $highlight-purple;
+      background-color: rgba($highlight-purple, 0.15);
+      border: 1px solid rgba($highlight-purple, 0.15);
+    }
+    &:first-child {
+      border-top-left-radius: 3px;
+      border-bottom-left-radius: 3px;
+    }
+    &.last {
+      border-right: 1px solid $gray4;
+      border-top-right-radius: 3px;
+      border-bottom-right-radius: 3px;
+      &:hover {
+        border-right: 1px solid rgba($highlight-purple, 0.15);
+      }
+      &.active {
+        border-right: 1px solid rgba($highlight-purple, 0.15);
+      }
+    }
+    .badge {
+      margin-bottom: 1px;
+    }
+  }
+  .tab-content {
+    border-radius: 3px;
+    border-color: $gray4;
+  }
+}
+.paged-modal-default {
+  justify-content: space-between;
+  flex-wrap: wrap;
+  font-size: 14px;
+  font-weight: 600;
+  padding: 0;
+  a {
+    color: $main-black;
+  }
+  .step {
+    white-space: nowrap;
+    width: 100%;
+
+    .step-number {
+      display: inline-block;
+      color: $highlight-purple;
+      text-align: center;
+      margin: 0 4px;
+      background-color: rgba($highlight-purple, 0.15);
+      width: 24px;
+      height: 24px;
+      line-height: 24px;
+    }
+    &.active {
+      a {
+        color: $highlight-purple;
+      }
+      .step-number {
+        background-color: $highlight-purple;
+        color: $white;
+      }
+    }
+    &.completed {
+      .step-title {
+      }
+      .step-number {
+        background-color: $highlight-purple;
+        color: $white;
+      }
+    }
+  }
+}
+@media only screen and (min-width: 502px) {
+  .paged-modal-default {
+    padding: 0 0;
+    flex-wrap: inherit;
+    .step {
+      &:not(:last-of-type)::after {
+        content: "";
+        display: inline-block;
+        width: 100%;
+        border-bottom: 1px dashed $purple-tint;
+        height: 1px;
+      }
+      &:last-of-type {
+        width: auto !important;
+      }
+    }
+  }
+}
+@media only screen and (min-width: 992px) {
+  .paged-modal-default {
+    padding: 0 40px;
+  }
+}
+.modal {
+  label {
+    color: $gray1;
+    font-weight: 500;
   }
 }
 
@@ -120,6 +414,15 @@ pre {
     }
   }
 }
+
+.commaList {
+  span:not(:last-child) {
+    &:after {
+      content: ", ";
+    }
+  }
+}
+
 .appbox {
   background-color: #fff;
   border: 1px solid $app-border;
@@ -788,8 +1091,8 @@ li.reports a span img {
 
 .experiments {
   .experiment-table {
-    border: 1px solid $app-border;
-    color: $gray-600;
+    //border: 1px solid $app-border;
+    //color: $gray-600;
 
     h1,
     h2,
@@ -875,12 +1178,12 @@ li.reports a span img {
   }
 }
 
-.experiment-details {
+.experiment-details,
+.metric {
   .tab-content {
     background-color: #fff;
     padding: 1rem;
-    border: 1px solid $gray-300;
-    border-top: none;
+    border: 1px solid $gray4;
   }
 
   h5 {
@@ -917,6 +1220,12 @@ li.reports a span img {
           padding-bottom: 10px;
         }
       }
+    }
+  }
+  .purple-phase {
+    .percent-traffic,
+    .split {
+      color: $highlight-purple;
     }
   }
   .contents {
@@ -1003,6 +1312,22 @@ li.reports a span img {
   .loser {
     background-color: $lighter-red;
     border-color: #f0d5ce;
+  }
+  .image-blank {
+    background-size: contain;
+    background: #fafafa url("/images/image-blank.png") no-repeat 50% 50%;
+    min-height: 300px;
+    border-top: 1px solid $gray4;
+    border-bottom: 1px solid $gray4;
+  }
+  .experiment-image {
+    height: 300px;
+    width: 100%;
+    object-fit: scale-down;
+    object-position: 50% 50%;
+    background: $gray1;
+    border-top: 1px solid $gray4;
+    border-bottom: 1px solid $gray4;
   }
   .results-table {
     font-size: 14px;
