Fix report race condition, hide tabs when a user doesn't have edit permissions

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -148,6 +148,9 @@ pre {
     font-weight: 600;
   }
 }
+.modal-dialog.modal-fill {
+  margin: 0 auto;
+}
 .gbtable {
   color: $main-black;
   margin-bottom: 0;
