--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -516,6 +516,10 @@ pre {
       top: 100%;
       left: 50%;
       transform: translate(-50%, 0);
+
+      .arrow::before {
+        border-bottom-color: $blue;
+      }
     }
     .arrow {
       left: 50%;
@@ -528,8 +532,15 @@ pre {
       background-color: $blue;
       box-shadow: 1px 1px 4px rgb(0 0 0 / 40%);
     }
-    .arrow::before {
-      border-bottom-color: $blue;
+
+    &.bs-tooltip-top {
+      bottom: 1rem;
+      left: 50%;
+      transform: translate(-50%, 0);
+
+      .arrow::before {
+        border-top-color: $blue;
+      }
     }
   }
   &:hover .tooltip {
