--- a/packages/front-end/components/Layout/TopNav.module.scss
+++ b/packages/front-end/components/Layout/TopNav.module.scss
@@ -21,7 +21,11 @@ $sidebarwidth: 240px;
   font-size: 24px;
   line-height: 24px;
 }
-
+.userinfo {
+  &:hover {
+    background: inherit;
+  }
+}
 @media (max-width: 1180px) {
   .pagetitle {
     padding-left: 10px;
