Made imported experiments default to the results tab and refresh the results when first created

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -1204,6 +1204,11 @@ li.metrics a span img {
     color: $highlight-purple;
   }
 }
+.infomessage {
+  div {
+    transition: all 0.8s cubic-bezier(0.685, 0.0473, 0.346, 1);
+  }
+}
 .experiment-details,
 .metric {
   .tab-content {
