--- a/packages/back-end/src/templates/email/base.jinja
+++ b/packages/back-end/src/templates/email/base.jinja
@@ -234,7 +234,7 @@
         <!-- Email Header : BEGIN -->
         <tr>
           <td style="padding: 20px 0; text-align: center">
-            <img src="https://growthbook.io/logos/growthbook-logo.png" width="264" height="48" alt="GrowthBook"
+            <img src="https://cdn.growthbook.io/growthbook-logo.png" width="264" height="48" alt="GrowthBook"
               border="0"
               style="height: auto; font-family: sans-serif; font-size: 15px; line-height: 15px; color: #555555;">
           </td>
