Added more options for the spark graphs, removed the overview graph

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -1205,6 +1205,7 @@ li.metrics a span img {
   }
 }
 .experiment-details,
+.feature-details,
 .metric {
   .tab-content {
     background-color: #fff;
