Added support for namespaces in the GrowthBook UI, and added them to the features API call

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -521,6 +521,14 @@ pre {
         border-bottom-color: $blue;
       }
     }
+    &.bs-tooltip-left {
+      .arrow {
+        display: none;
+      }
+      .arrow::before {
+        border-left-color: $blue;
+      }
+    }
     .arrow {
       left: 50%;
       margin-left: -0.4rem;
