--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -138,6 +138,24 @@ pre {
     background-color: rgba(124, 69, 234, 0.06);
   }
 }
+.hover-show {
+  .show-target {
+    transition: all 0.3s cubic-bezier(0.685, 0.0473, 0.346, 1);
+    opacity: 0;
+  }
+  &:hover {
+    .show-target {
+      opacity: 1;
+    }
+  }
+}
+.fade-hover {
+  opacity: 0.5;
+  transition: all 0.3s cubic-bezier(0.685, 0.0473, 0.346, 1);
+  &:hover {
+    opacity: 1;
+  }
+}
 .modal {
   .modal-header {
     background-color: $gray5;
