--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -329,6 +329,7 @@ pre {
       color: $highlight-purple;
       background-color: rgba($highlight-purple, 0.15);
       border: 1px solid rgba($highlight-purple, 0.15);
+      font-weight: bold;
     }
     &:first-child {
       border-top-left-radius: 3px;
