Add audit log modal to features, standardize audit format for experiment/metric events

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -474,6 +474,9 @@ pre {
 .flex-1 {
   flex: 1;
 }
+.diff-wrapper td {
+  padding: 0 10px !important;
+}
 .expandable-container {
   overflow: hidden;
   max-height: 120px;
