--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -133,10 +133,13 @@ pre {
   }
 }
 .hover-highlight {
-  transition: all 0.3s cubic-bezier(0.685, 0.0473, 0.346, 1);
+  transition: background-color 0.1s;
   &:hover {
     background-color: rgba(124, 69, 234, 0.06);
   }
+}
+.highlight {
+  background-color: rgba(124, 69, 234, 0.06);
 }
 .hover-show {
   .show-target {
