--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -758,17 +758,26 @@ pre {
     transition: 0.3s;
   }
 
-  input:checked + label {
-    background: $purple;
-  }
-
   input:checked + label:after {
     left: calc(100% - 2px);
     transform: translateX(-100%);
   }
 
+  input:checked + label {
+    background: $purple;
+  }
+
   label:active:after {
     width: 30px;
+  }
+
+  &.disabled {
+    label {
+      cursor: not-allowed;
+    }
+    label:active:after {
+      width: 21px;
+    }
   }
 }
 
