Added differnet toggle color (secondary). Adjusted variation weights to have decimals

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -794,6 +794,9 @@ pre {
   input:checked + label {
     background: $purple;
   }
+  &.toggle-secondary input:checked + label {
+    background: $blue;
+  }
 
   label:active:after {
     width: 30px;
