Changed how variation weights are defined and shown in features (#403)

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -766,6 +766,9 @@ pre {
   input:checked + label {
     background: $purple;
   }
+  &.toggle-featureValue input:checked + label {
+    background: $blue;
+  }
 
   label:active:after {
     width: 30px;
