virtual portal for tooltip on experients for metrics

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -541,6 +541,7 @@ pre {
 
 .tiptrigger {
   display: inline-block;
+  position: relative;
   .tooltip {
     display: none;
     font-family: inherit;
