tooltip revisions to use popper.js positioning

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -539,96 +539,55 @@ pre {
   }
 }
 
-.tiptrigger {
-  display: inline-block;
-  position: relative;
-  .tooltip {
-    display: none;
-    font-family: inherit;
-    opacity: 0;
+.gb-tooltip {
+  border-radius: 5px;
 
-    &.bs-tooltip-top {
-      bottom: 1rem;
-      left: 50%;
-      transform: translate(-50%, 0);
+  .arrow {
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    z-index: -1;
 
-      .arrow::before {
-        border-top-color: $blue;
-      }
-    }
-    &.bs-tooltip-top.white {
-      .arrow::before {
-        border-top-color: white;
-      }
-    }
-
-    &.bs-tooltip-right {
-      top: 50%;
-      left: 100%;
-      transform: translate(0, -50%);
-
-      .arrow {
-        top: calc(50% - 0.4rem);
-        left: 0;
-        margin-left: 0;
-      }
-
-      .arrow::before {
-        border-right-color: $blue;
-      }
-    }
-    &.bs-tooltip-right.white {
-      .arrow::before {
-        border-right-color: lightgray;
-      }
-    }
-
-    &.bs-tooltip-bottom {
-      top: 100%;
-      left: 50%;
-      transform: translate(-50%, 0);
-
-      .arrow::before {
-        border-bottom-color: $blue;
-      }
-    }
-    &.bs-tooltip-bottom.white {
-      .arrow::before {
-        border-bottom-color: white;
-      }
-    }
-
-    &.bs-tooltip-left {
-      .arrow {
-        display: none;
-      }
-      .arrow::before {
-        border-left-color: $blue;
-      }
-    }
-    &.bs-tooltip-left.white {
-      .arrow::before {
-        border-left-color: white;
-      }
-    }
-
-    .arrow {
-      left: 50%;
-      margin-left: -0.4rem;
-    }
-    .tooltip-inner {
-      color: #fff;
-      max-width: 400px;
-      padding: 0.7em 1em;
-      background-color: $blue;
-      box-shadow: 1px 1px 4px rgb(0 0 0 / 40%);
+    &::before {
+      content: "";
+      transform: rotate(45deg);
+      background-color: #fff;
+      box-shadow: 0 1rem 3rem rgb(0 0 0 / 18%);
+      position: absolute;
+      width: 8px;
+      height: 8px;
+      z-index: -1;
     }
   }
-  &:hover .tooltip {
-    display: block;
-    opacity: 1;
+
+  .body {
+    background: #fff;
+    color: $dark;
+    padding: 15px;
+    border-radius: 5px;
+  }
+
+  &[data-popper-placement^="top"] > .arrow {
+    bottom: -4px;
+    margin-left: -4px;
+  }
+
+  &[data-popper-placement^="bottom"] > .arrow {
+    top: -4px;
+    margin-left: -4px;
+  }
+
+  &[data-popper-placement^="left"] > .arrow {
+    right: -4px;
+    margin-top: -4px;
+  }
+
+  &[data-popper-placement^="right"] > .arrow {
+    left: -4px;
+    margin-top: -4px;
   }
 }
+
 .nav-link {
   padding: 0.3rem 0.8rem;
 }
