changed target inputs to use SelectFields so they show up on demos

--- a/packages/front-end/components/Features/ConditionInput.module.scss
+++ b/packages/front-end/components/Features/ConditionInput.module.scss
@@ -46,6 +46,12 @@
 .addicon {
 }
 
+.matchingInput {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  min-height: 38px;
+}
+
 @media (max-width: 520px) {
   .addcondition {
     margin-left: 0;
