Small UI fixes for new experiment page.
- Add "Jump to results" link for tests with long descriptions
- Increased right rail width for tests with long metric names
- Remove "0" output by idea link when impact score is 0
- Fix left nav z-index

--- a/packages/front-end/components/Layout/Layout.module.scss
+++ b/packages/front-end/components/Layout/Layout.module.scss
@@ -16,6 +16,7 @@ $topbarheight: 60px;
   overflow: hidden;
   overflow-y: auto;
   font-family: Poppins, sans-serif;
+  z-index: 990;
 }
 .sidebarlogo {
   padding: 8px 20px 8px;
@@ -64,13 +65,6 @@ $topbarheight: 60px;
     left: -$expandedwidth;
     padding-top: 60px;
     z-index: 900;
-  }
-  .mainmenu {
-    ul {
-      li {
-        //width: $expandedwidth;
-      }
-    }
   }
   .sidebaropen {
     left: 0;
