--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -451,7 +451,15 @@ pre {
     }
   }
 }
-
+.hover-link {
+  a {
+    opacity: 0;
+    transition: all 0.3s cubic-bezier(0.685, 0.0473, 0.346, 1);
+  }
+  &:hover a {
+    opacity: 1;
+  }
+}
 .appbox {
   background-color: #fff;
   border: 1px solid $app-border;
