--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -110,6 +110,14 @@ pre {
   background-color: rgba(124, 69, 234, 0.1);
   border: 2px solid #7c45ea;
 }
+.btn-outline-selected:not(:disabled):not(.disabled) {
+  background-color: rgba(69, 196, 234, 0.1);
+  border: 2px solid #00894f;
+}
+.btn-light-hover:hover {
+  background-color: rgba(154, 110, 248, 0.2);
+  color: inherit;
+}
 .badge {
   line-height: 1em;
   font-size: 85.72%; //12px
