--- a/packages/front-end/components/GuidedGetStarted.module.scss
+++ b/packages/front-end/components/GuidedGetStarted.module.scss
@@ -1,11 +1,8 @@
 @import "../styles/colors.scss";
 
-.pageWrapper {
-  max-width: 1000px;
-}
-
-.reactPlayer {
-  box-shadow: #9d9d9d 4px 4px 12px 0px;
+.playerWrapper {
+  width: 100%;
+  height: 100%;
 }
 
 .blackTitle {
