add .password-presentation css class to help non-password fields look like passwords

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -793,6 +793,11 @@ pre {
   }
 }
 
+// To make non-password fields look like password fields.
+.password-presentation {
+  -webkit-text-security: disc;
+}
+
 .experiment-compact {
   border-spacing: 0;
   border: 1px solid #ddd;
