--- a/packages/front-end/styles/_colors.scss
+++ b/packages/front-end/styles/_colors.scss
@@ -38,6 +38,8 @@ $gray5: #f0f1f5;
 $gray6: #f6f7f9;
 
 $main-background: #f5f7fa;
+$main-background-dark: #121212;
+$surface-background-dark: #292929;
 $dark-purple: #391c6d;
 $light-grey: #fafafa;
 $light-green: #d2f2db;
