table, text link, form styles for dark mode

--- a/packages/front-end/styles/_colors.scss
+++ b/packages/front-end/styles/_colors.scss
@@ -39,7 +39,7 @@ $gray6: #f6f7f9;
 
 $main-background: #f5f7fa;
 $main-background-dark: #121212;
-$surface-background-dark: #292929;
+$surface-background-dark: $gray-900;
 $dark-purple: #391c6d;
 $light-grey: #fafafa;
 $light-green: #d2f2db;
