--- a/packages/front-end/styles/_colors.scss
+++ b/packages/front-end/styles/_colors.scss
@@ -26,6 +26,7 @@ $second-blue: #267ba5;
 // redesign colors:
 $dark-blue: #050549;
 $highlight-purple: #7c45ea;
+$highlight-purple-light: lighten($highlight-purple, 20%);
 $purple-tint: #a3a8c2;
 $dark-purple2: #1c0555;
 $main-black: #171221;
