--- a/packages/front-end/components/Layout/TopNav.module.scss
+++ b/packages/front-end/components/Layout/TopNav.module.scss
@@ -10,7 +10,7 @@ $sidebarwidth: 240px;
   z-index: 945;
   transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   background-color: var(--surface-background-color);
-  border-bottom: 1px solid var(--border-color-alt);
+  border-bottom: 1px solid var(--border-color-300);
 }
 .pagetitle {
   font-size: 18px;
