--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -457,7 +457,7 @@ pre {
 
 .appbox {
   background-color: var(--surface-background-color);
-  border: 1px solid var(--border-color);
+  border: 1px solid var(--border-color-100);
   margin-bottom: 1em;
   border-radius: 5px;
 
@@ -1096,7 +1096,7 @@ li.metrics a span img {
   transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   position: fixed;
   overflow: hidden;
-  border-right: 1px solid var(--border-color-alt);
+  border-right: 1px solid var(--border-color-300);
 }
 
 .watchaction {
@@ -1128,7 +1128,7 @@ li.metrics a span img {
       padding-top: 0.7rem;
     }
     li:not(:last-child) {
-      border-bottom: 1px solid var(--border-color);
+      border-bottom: 1px solid var(--border-color-100);
     }
   }
   .semi-bold {
@@ -1141,7 +1141,7 @@ li.metrics a span img {
   }
   .activity-box {
     background-color: #fff;
-    border: 1px solid var(--border-color);
+    border: 1px solid var(--border-color-100);
     padding: 20px;
     border-radius: 4px;
     h4 {
@@ -1784,7 +1784,7 @@ html {
     transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
     position: static;
     overflow: hidden;
-    border-right: 1px solid var(--border-color-alt);
+    border-right: 1px solid var(--border-color-300);
   }
   .experiment-details .contents {
     padding: 15px;
