--- a/packages/front-end/styles/_bootstrap-theme-overrides.scss
+++ b/packages/front-end/styles/_bootstrap-theme-overrides.scss
@@ -120,4 +120,32 @@ a.text-dark:focus {
   border-right-color: var(--border-color-200) !important;
 }
 
+// region Alerts
+
+.alert-info {
+  background-color: var(--alert-info-background);
+  border-color: var(--alert-info-border-color);
+  color: var(--alert-info-color);
+}
+
+.alert-danger {
+  background-color: var(--alert-danger-background);
+  border-color: var(--alert-danger-border-color);
+  color: var(--alert-danger-color);
+}
+
+.alert-warning {
+  background-color: var(--alert-warn-background);
+  border-color: var(--alert-warn-border-color);
+  color: var(--alert-warn-color);
+}
+
+.alert-success {
+  background-color: var(--alert-success-background);
+  border-color: var(--alert-success-border-color);
+  color: var(--alert-success-color);
+}
+
+// endregion Alerts
+
 // endregion Surfaces
