--- a/packages/front-end/styles/theme.scss
+++ b/packages/front-end/styles/theme.scss
@@ -15,6 +15,7 @@
   --text-link-color: #007bff; // default Bootstrap
   --text-link-hover-color: #0056b3; // default Bootstrap
   --text-color-muted: #{colors.$gray-600};
+  --text-color-on-bright: #{colors.$white};
 
   --form-input-group-background: #e9ecef;
   --form-input-group-color: #{colors.$gray-700};
@@ -57,6 +58,7 @@
   --text-link-color: #{lighten(#007bff, 20%)};
   --text-link-hover-color: #{lighten(#007bff, 10%)};
   --text-color-muted: #{colors.$gray-500};
+  --text-color-on-bright: #{colors.$black};
 
   --form-input-group-background: #{colors.$gray-800};
   --form-input-group-color: #{colors.$gray6};
